[tool.poetry]
name = "airline-ai-agent"
version = "0.1.0"
description = "Airline AI Agent"
authors = ["Keith Tenzer <keith.tenzer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
langgraph = "^0.4.3"
gradio = "^5.29.0"
stripe = "^12.1.0"
requests = "^2.32.3"
amadeus = "^12.0.0"
dotenv = "^0.9.9"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.16"
dateparser = "^1.2.1"
temporalio = "^1.11.1"
openai = "^1.79.0"
openai-agents = "^0.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
